@@ -117,7 +117,7 @@ public:
 
 private slots:
   void 	busywaitchanged(const char*);
-  void 	use_cdline_toggled(bool);
+  //  void 	use_cdline_toggled(bool);
   void 	modemcmdsbutton();
   void 	terminal();
   void 	query_modem();
