@@ -1,3 +1,7 @@
+1999-08-17  Harri Porten  <porten@kde.org>
+
+	* modem.cpp: disabled CD line test. Responsible for too many problems.
+
 1999-08-07  Harri Porten  <porten@kde.org>
 
 	* modem.cpp: removed the "Mode 7bit" CompuServe hack after I saw
